--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,9 @@
         <header>
             <div class="container-nav">
                 <div class="logo">
-                    <a href="#"><h1>Belicio Batista Cardoso</h1></a>
+                    <a href="#">
+                        <h1>Belicio Batista Cardoso</h1>
+                    </a>
                 </div>
                 <nav>
                     <ul>
@@ -25,9 +27,15 @@
                 </nav>
             </div>
 
-            <div class="text">
-                <h1>I Am Web Developer</h1>
-                <p>Eu Belicio Batista Cardoso</p>
+            <div class="container-header">
+                <div class="left">
+                    <h1>I Am Web Developer</h1>
+                    <p>Eu Belicio Batista Cardoso</p>
+                </div>
+                <div class="right">
+                    <img src="./images/bello.jpg" alt="foto belicio" >
+                </div>
+
             </div>
 
         </header>
@@ -38,7 +46,7 @@
             <section class="portfolio">
                 <h1>Portfolio</h1>
             </section>
-            
+
         </main>
         <footer>
             <H1>footer</H1>
